--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>
     </div>
 
-    <p class="text-center text-sm text-gray-500 mt-8">Built with 💪 by SKCT Devs</p>
+    <p class="text-center text-sm text-gray-500 mt-8">Built with 💪 by Pravin Viswa</p>
   </div>
 
 </body>
